--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   summary-path:
     description: 'Filepath to coverage-summary.json'
     required: true
+  test-framework:
+    description: 'Supports [karma|jest]'
+    required: true
 outputs:
   coverage:
     description: 'The test coverage report'
