--- a/action.yml
+++ b/action.yml
@@ -8,12 +8,15 @@ inputs:
   github-token:
     description: 'Github token'
     required: true
-  summary-path:
-    description: 'Filepath to coverage-summary.json'
-    required: true
   test-framework:
     description: 'Supports [karma|jest]'
     required: true
+  summary-path:
+    description: 'Filepath to Karma coverage-summary.json'
+    required: false
+  test-command:
+    description: 'Command to run Jest test coverage, defaults to "jest --coverage"'
+    required: false
 outputs:
   coverage:
     description: 'The test coverage report'
