add threshold input and fail if coverage is too low

--- a/action.yml
+++ b/action.yml
@@ -11,10 +11,13 @@ inputs:
   test-framework:
     description: 'Supports [karma|jest]'
     required: true
-  summary-path:
+  passing-threshold:
+    description: '% the coverage needs to be to pass the step, defaults to 80'
+    required: false
+  karma-summary-path:
     description: 'Filepath to Karma coverage-summary.json'
     required: false
-  test-command:
+  jest-test-command:
     description: 'Command to run Jest test coverage, defaults to "jest --coverage"'
     required: false
 outputs:
